migrando para docker swarm