@@ -1,172 +1,119 @@
 package self.distributing.systems.containermanager.module.docker.service;
 
 import com.github.dockerjava.api.DockerClient;
-import com.github.dockerjava.api.command.CreateContainerResponse;
-import com.github.dockerjava.api.exception.DockerException;
-import com.github.dockerjava.api.model.Container;
-import com.github.dockerjava.api.model.ContainerPort;
-import com.github.dockerjava.api.model.HostConfig;
+import com.github.dockerjava.api.command.InspectContainerResponse;
+import com.github.dockerjava.api.model.*;
+import com.github.dockerjava.api.model.Service;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
 
-import self.distributing.systems.containermanager.module.docker.controller.dto.listcontainer.ContainerDTO;
-import self.distributing.systems.containermanager.module.docker.controller.dto.listcontainer.ContainerPortDTO;
+import java.util.*;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-
-@Service
+@org.springframework.stereotype.Service
 public class DockerService {
 
 	@Autowired
 	private DockerClient dockerClient;
 
-	private List<Container> containerList(boolean showStoppedContainers, String containerName) {
-		List<String> statusFilter = new ArrayList<>();
-		statusFilter.add("running");
-		if (showStoppedContainers) {
-			statusFilter.add("exited");
-		}
+	public void createSwarmService(String serviceName, List<String> cmd, int replicas, String targetLocation) {
+		ServiceSpec serviceSpec = new ServiceSpec()
+				.withName(serviceName)
+				.withTaskTemplate(
+						new TaskSpec()
+								.withContainerSpec(new ContainerSpec()
+										.withImage("avilamatheus/dana-sds:latest")
+										.withCommand(cmd)
+										.withTty(true)
+										.withOpenStdin(true)
+								)
+								.withPlacement(new ServicePlacement()
+										.withConstraints(List.of("node.labels.location==" + targetLocation))
+								)
+				)
+				.withMode(new ServiceModeConfig()
+						.withReplicated(new ServiceReplicatedModeOptions()
+								.withReplicas(replicas))
+				)
+				.withNetworks(List.of(new NetworkAttachmentConfig().withTarget("sds_network")));
 
-		// Configura o comando e adiciona filtros de forma condicional
-		var listCommand = dockerClient.listContainersCmd().withStatusFilter(statusFilter);
-		if (containerName != null && !containerName.isEmpty()) {
-			listCommand = listCommand.withNameFilter(List.of(containerName));
-		}
-
-		return listCommand.exec();
+		dockerClient.createServiceCmd(serviceSpec).exec();
 	}
 
-	private ContainerDTO toContainerDTO(Container container, boolean detailed) {
-		List<ContainerPortDTO> portsList = new ArrayList<>();
-		if (detailed) {
-			for (ContainerPort containerPort : container.getPorts()) {
-				portsList.add(new ContainerPortDTO(
-						containerPort.getIp(),
-						containerPort.getPublicPort(),
-						containerPort.getPrivatePort()
-				));
-			}
-		}
+	public List<String> getServiceReplicaIPs(String serviceName) {
+		List<String> ipList = new ArrayList<>();
 
-		return new ContainerDTO(
-				container.getId(),
-				Arrays.stream(container.getNames()).toList().get(0).substring(1),
-				detailed ? container.getImage() : null,
-				detailed ? container.getState() : null,
-				detailed ? portsList : null,
-				detailed ? Collections.singletonList(container.getCommand()) : null
+		dockerClient.listContainersCmd()
+				.withStatusFilter(List.of("running"))
+				.withLabelFilter(Map.of("com.docker.swarm.service.name", serviceName))
+				.exec()
+				.forEach(container -> {
+					InspectContainerResponse inspect = dockerClient.inspectContainerCmd(container.getId()).exec();
+					ContainerNetwork network = inspect.getNetworkSettings().getNetworks().get("sds_network");
+					if (network != null && network.getIpAddress() != null) {
+						ipList.add(network.getIpAddress());
+					}
+				});
+
+		return ipList;
+	}
+
+	public List<Service> listServicesByName(String serviceName) {
+		return dockerClient.listServicesCmd()
+				.withNameFilter(Collections.singletonList(serviceName))
+				.exec();
+	}
+
+	public void removeService(String serviceName) {
+		listServicesByName(serviceName).forEach(service ->
+				dockerClient.removeServiceCmd(service.getId()).exec()
 		);
 	}
 
-	public List<ContainerDTO> simpleListContainers(String containerName) {
-		List<ContainerDTO> response = new ArrayList<>();
-		for (Container container : containerList(false, containerName)) {
-			response.add(toContainerDTO(container, false));
-		}
-		return response;
-	}
+	public void updateServiceReplicas(String serviceName, int replicas) {
+		List<Service> services = listServicesByName(serviceName);
+		if (!services.isEmpty()) {
+			Service service = services.get(0);
+			ServiceSpec currentSpec = service.getSpec();
 
-	public List<ContainerDTO> detailedListContainers(String containerName) {
-		List<ContainerDTO> response = new ArrayList<>();
-		for (Container container : containerList(true, containerName)) {
-			response.add(toContainerDTO(container, true));
-		}
-		return response;
-	}
+			ServiceSpec updatedSpec = new ServiceSpec()
+					.withName(currentSpec.getName())
+					.withTaskTemplate(currentSpec.getTaskTemplate())
+					.withNetworks(currentSpec.getNetworks())
+					.withEndpointSpec(currentSpec.getEndpointSpec())
+					.withMode(new ServiceModeConfig()
+							.withReplicated(new ServiceReplicatedModeOptions()
+									.withReplicas(replicas)));
 
-
-	public List<ContainerDTO> startContainers(int numberOfContainers, String containerName, String cmd) throws InterruptedException, DockerException {
-		List<ContainerDTO> requestedContainers = requestedContainers(numberOfContainers, containerName, cmd);
-		List<ContainerDTO> currentContainers = detailedListContainers(containerName);
-
-		List<ContainerDTO> containersToBeStopped = currentContainers.stream()
-				.filter(container -> !requestedContainers.contains(container) && !container.state().equals("exited"))
-				.toList();
-		requestedContainers.removeAll(containersToBeStopped);
-
-		this.stopContainers(containersToBeStopped);
-
-		requestedContainers.removeAll(
-				currentContainers
-						.stream()
-						.filter(current -> current.state() != null
-										&& current.state().equals("running")
-						).toList()
-		);
-
-		List<ContainerDTO> containersToBeCreated = requestedContainers.stream()
-				.filter(container -> !currentContainers.contains(container))
-				.toList();
-		requestedContainers.removeAll(containersToBeCreated);
-		this.createAndStartContainers(containersToBeCreated);
-
-		List<ContainerDTO> stoppedContainersToBeStarted = currentContainers.stream()
-				.filter(requested -> requestedContainers.stream()
-						.anyMatch(current -> current.name().equals(requested.name())))
-				.toList();
-		requestedContainers.removeAll(stoppedContainersToBeStarted);
-		this.startStoppedContainers(stoppedContainersToBeStarted);
-
-		return this.simpleListContainers(containerName); // Lista os containers
-	}
-
-	public void stopAndRemoveContainers() {
-		List<ContainerDTO> containers = this.detailedListContainers(null);
-		for (ContainerDTO container : containers) {
-			dockerClient.removeContainerCmd(container.id()).withForce(true).exec();
-		}
-	}
-
-	private void startStoppedContainers(List<ContainerDTO> containers) {
-		for (ContainerDTO containerDTO : containers) {
-			dockerClient.startContainerCmd(containerDTO.id()).exec();
-		}
-	}
-
-	private void stopContainers(List<ContainerDTO> containers) {
-		for (ContainerDTO containerDTO : containers) {
-			dockerClient.killContainerCmd(containerDTO.id()).exec();
-		}
-		try {
-			Thread.sleep(10);
-		} catch (InterruptedException e) {
-			System.out.println(e.getMessage());
-		}
-	}
-
-	private void createAndStartContainers(List<ContainerDTO> containers) {
-		for (ContainerDTO containerDTO : containers) {
-			// Cria o container
-			CreateContainerResponse container = dockerClient.createContainerCmd("dana")
-					.withName(containerDTO.name())
-					.withTty(true)
-					.withStdinOpen(true)
-					.withCmd(containerDTO.cmd())
-					.withHostConfig(
-							HostConfig.newHostConfig()
-									.withNetworkMode("sds_network")
-					)
+			dockerClient.updateServiceCmd(service.getId(), updatedSpec)
+					.withVersion(service.getVersion().getIndex())
 					.exec();
-
-			// Inicia o container
-			dockerClient.startContainerCmd(container.getId()).exec();
 		}
 	}
 
-	private List<ContainerDTO> requestedContainers(int numberOfContainers, String containerName, String cmd) {
-		List<String> cmdInput = splitStringBySpaces(cmd);
-		List<ContainerDTO> listOfRequestedContainers = new ArrayList<>();
+	public void startOrUpdateService(String serviceName, String cmd, int replicas, String newLocation) {
+		List<String> commandList = splitStringBySpaces(cmd);
+		List<Service> existing = listServicesByName(serviceName);
 
-		for (int i = 1; i <= numberOfContainers; i++) {
-			ContainerDTO requestedContainer = new ContainerDTO(null, containerName + i, null, null, null, cmdInput);
-			listOfRequestedContainers.add(requestedContainer);
+		if (existing.isEmpty()) {
+			createSwarmService(serviceName, commandList, replicas, newLocation);
+			return;
 		}
 
-		return listOfRequestedContainers;
+		Service service = existing.get(0);
+		List<String> currentConstraints = Optional.ofNullable(service.getSpec().getTaskTemplate().getPlacement())
+				.map(ServicePlacement::getConstraints)
+				.orElse(Collections.emptyList());
+
+		String desiredConstraint = "node.labels.location==" + newLocation;
+
+		boolean constraintChanged = currentConstraints.stream().noneMatch(desiredConstraint::equals);
+
+		if (constraintChanged) {
+			removeService(serviceName);
+			createSwarmService(serviceName, commandList, replicas, newLocation);
+		} else {
+			updateServiceReplicas(serviceName, replicas);
+		}
 	}
 
 	private List<String> splitStringBySpaces(String input) {
@@ -178,4 +125,23 @@ public class DockerService {
 				.filter(s -> !s.isEmpty())
 				.toList();
 	}
+
+	public List<String> getServiceReplicaNames(String serviceName) {
+		List<String> names = new ArrayList<>();
+
+		List<Task> tasks = dockerClient.listTasksCmd()
+				.withServiceFilter(serviceName)
+				.withStateFilter(TaskState.RUNNING)
+				.exec();
+
+		for (Task task : tasks) {
+			if (task.getStatus().getState() == TaskState.RUNNING) {
+				String name = serviceName + "." + task.getSlot() + "." + task.getId();
+				names.add(name);
+			}
+		}
+
+		return names;
+	}
+
 }
